--- a/Diary.Infrastructure/Diary.Infrastructure.csproj
+++ b/Diary.Infrastructure/Diary.Infrastructure.csproj
@@ -15,7 +15,10 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11"/>
+        <PackageReference Include="SkiaSharp" Version="2.88.7" />
+        <PackageReference Include="SkiaSharp.Views" Version="2.88.7" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0"/>
+        <PackageReference Include="WkhtmltopdfCore" Version="6.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
